# enterticketsystem

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  M2开发过程.md  M3开发过程.md  M5-02开发过程.md  M5-03开发过程.md  M5开发过程.md  MVP测试执行方案.md  README.md  docker-compose.yml  github提交.md  m0-m1开发记录.md  start-entrypoint.sh  start.sh
backend/: .env.example  pyproject.toml  seed.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py  errors.py
backend/app/domain/: __init__.py  enums.py  models.py
backend/app/repositories/: __init__.py  json_repository.py  protocols.py
backend/app/schemas/: __init__.py  auth.py  categories.py  tickets.py  users.py
backend/app/security/: __init__.py  passwords.py  sessions.py
backend/app/services/: admin_initializer.py  admin_stats_service.py  auth_service.py  bootstrap.py  category_service.py  customer_ticket_service.py  internal_ticket_service.py  user_admin_service.py
backend/app/storage/: __init__.py  json_store.py
backend/tests/api/: test_admin_auth_dependencies.py  test_admin_categories.py  test_admin_stats.py  test_admin_user_management.py  test_app_startup.py  test_auth_routes.py  test_customer_ticket_messages.py  test_customer_ticket_reads.py  test_customer_tickets.py  test_error_response_contract.py  test_internal_ticket_assignment.py  test_internal_ticket_messages.py  test_internal_ticket_reads.py  test_internal_ticket_status.py
backend/tests/service/: test_admin_stats_service.py  test_security_session_admin.py
backend/tests/storage/: __init__.py  test_json_store.py
(+69 files in other folders)
